[package]
name = "rustykeys-hid-mouse"
version = "0.1.0"
authors = [ "Ein Terakawa <applause@elfmimi.jp>", "evan <evanmolder@gmail.com>", "The rp-rs Developers" ]
edition = "2018"
# homepagu = ""
# description = ""
license = "MIT OR Apache-2.0"
# repository =  ""

[dependencies]
rp-pico = "0.3.0"
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7", optional = true }
# cortex-m-rtic = "0.6.0-rc.4"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = "0.4.0"
embedded-hal = "0.2.5"
embedded-time = "0.12.0"
usb-device = "0.2.8"
# usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
# futures = { version = "0.3", default-features = false, optional = true }
# nb = "1.0"
panic-halt = "0.2.0"

# i2c-pio = ""
# heapless = "0.7.9"
# embedded-sdmmc = ""
# smart-leds = "0.3.0"
# ws2812-pio = { }
# ssd1306 = "0.7.0"
# embedded-graphics = "0.7.1"

# defmt = "0.2.0"
# defmt-rtt = "0.2.0"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt", "rp2040-hal/rt"]


[[bin]]
name = "rustykeys-hid-mouse"
path = "main.rs"
